--- a/style.css
+++ b/style.css
@@ -24,11 +24,10 @@ h1 {
   align-items: center;
 
   flex-direction: column;
-  height: 100%;
 
   background-image:linear-gradient(white, rgb(176, 252, 180));
-  background-repeat:no-repeat;
-  background-attachment:fixed;
+  background-attachment: fixed;
+
   height:100%;
   width:100%;
 }
@@ -78,7 +77,7 @@ header {
 
 .level-choices {
   display:flex;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
   padding-top: 10px;
 }
 
@@ -90,10 +89,6 @@ header {
   color:white;
   margin: 20px 40px 10px 40px;
   text-align: center;
-}
-
-.easy-mode, .medium-mode, .hard-mode {
-  justify-content:center;
 }
 
 .level-button {
@@ -128,10 +123,8 @@ header {
   transform: rotateY(180deg);
 }
 
-
 .best-easy-time, .best-medium-time, .best-hard-time {
-  line-height:3px;
-  margin-top:110px;
+  padding-top: 10px;
 }
 
 @media (min-width: 400px) {
