--- a/style.css
+++ b/style.css
@@ -132,3 +132,17 @@ header {
     padding: 70px 70px 70px 50px;
   }
 }
+
+.grid {
+  background-color:#6E1D3F;
+  border: 3px rgb(255, 255, 255) solid;
+  outline:6px #6E1D3F solid;
+  border-radius:10px;
+
+  display: none;
+}
+
+.grid img { 
+  padding: 3px;
+  cursor:pointer;
+}
