--- a/style.css
+++ b/style.css
@@ -97,11 +97,15 @@ header {
   perspective: 500px;
 }
 
+.level-button img {
+  width: 100%;
+}
+
 .card {
   position: relative;
   height: 100%;
   width: 100%;
-  
+
   transition: transform 1000ms;
   transform-style: preserve-3d;
 }
