--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inspiration&family=Jost&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inspiration&family=Jost:wght@400;800&display=swap');
 
 * {
   box-sizing: border-box;
@@ -129,8 +129,23 @@ header {
   transform: rotateY(180deg);
 }
 
-.best-easy-time, .best-medium-time, .best-hard-time {
-  padding-top: 10px;
+.easy-mode, .medium-mode, .hard-mode {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.best-easy-score, .best-medium-score, .best-hard-score {
+  margin-top: 10px;
+  padding: 10px;
+  text-align: center;
+  border-radius: 10px;
+  border: 2px white solid;
+
+  font-size: 12px;
+  color: white; 
+
+  transition: opacity 1s;
 }
 
 .score-container {
@@ -166,6 +181,11 @@ header {
   display: none;
   gap: 10px;
   padding: 10px;
+}
+
+.highlight-text {
+  color:#6E1D3F;
+  font-weight:bold;
 }
 
 @media (min-width: 400px) {
